--- a/src/app/scss/_helpers.scss
+++ b/src/app/scss/_helpers.scss
@@ -15,6 +15,10 @@
   margin-bottom: $padding-large-vertical;
 }
 
+.mb-x {
+  margin-bottom: $padding-small-vertical;
+}
+
 .pb{
   padding: 0 0 $padding-small-vertical 0;
 }
