--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -1501,8 +1501,7 @@
     <button class="btn btn-lg btn-block btn-primary"
             type="button"
             data-ng-click="useVaihe(4)">
-      Siirry rinnakkaistallennuksen valintaan
-      <!--{{i18n.content.tietojensyotto.jatka[lang]}}-->
+      {{i18n.content.tietojensyotto.rinnakkaistallennusvalinta[lang]}}
     </button>
   </div>
 </div>
