--- a/src/app/html/header.html
+++ b/src/app/html/header.html
@@ -5,7 +5,7 @@
     </div>
     <div data-ng-if="state.name!='index'">
       <div>
-        <a href data-ui-sref="valitse({lang:lang})"><img src="img/justus2.png" alt="{{i18n.header.logotext[lang]}" class="img-responsive"></a>
+        <a href data-ui-sref="valitse()"><img src="img/justus2.png" alt="{{i18n.header.logotext[lang]}" class="img-responsive"></a>
       </div>
       <div class="navigation">
         <a href data-ui-sref="valitse()"
