Remove language parameter from url links

--- a/src/app/html/index_part.html
+++ b/src/app/html/index_part.html
@@ -3,7 +3,7 @@
   <i class="fa fa-sign-in" aria-hidden="true"></i> {{i18n.etusivu.kirjaudu[lang]}}
 </button>
 <button class="btn btn-block btn-lg btn-primary"
-  data-ui-sref="valitse({lang:lang})"
+  data-ui-sref="valitse()"
   data-ng-if="demoEnabled">
   <i class="fa fa-sign-in" aria-hidden="true"></i> Demo
 </button>
