--- a/src/app/html/justus/tallennus.html
+++ b/src/app/html/justus/tallennus.html
@@ -68,6 +68,12 @@
         </td>
       </tr>
 
+      <!-- Prjektinumero -->
+      <tr data-ng-if="isFieldVisible('projektinumero')">
+        <td class="condensed font-weight-bold">{{ i18n.content.form.projektinumero[lang] }}</td>
+        <td>{{ justus.julkaisu.projektinumero }}</td>
+      </tr>
+
       <!-- Konferenssin vakiintunut nimi -->
       <tr>
         <td class="condensed">{{ i18n.content.form.konferenssinvakiintunutnimi[lang] }}</td>
