--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -290,10 +290,10 @@
                   </ui-select>
               </div>
 
-          <div data-ng-if="isFieldVisible('alayksikko') " class="col-xs-12 form-group" id="alayksikkoGroup">
+          <div data-ng-if="isFieldVisible('alayksikko') " class="col-xs-12" id="alayksikkoGroup">
             <div>
             <div data-ng-repeat="ota in justus.organisaatiotekija[$index].alayksikko track by $index"
-                 data-ng-init="pIx=$parent.$index" class="row form-group">
+                 data-ng-init="pIx=$parent.$index" class="row">
               <div class="col-xs-9 col-sm-9">
                 <ui-select data-ng-model="alayksikko.selected"
                            on-select="useOrganisaatiotekijaAlayksikko(pIx,$index,$select.selected.arvo)"
@@ -350,6 +350,36 @@
       </div>
     </div>
   </div>
+
+   <!-- Kenttä: Projektinumero -->
+   <div class="row form-group"
+      id="projektinumeroGroup"
+      data-ng-if="isFieldVisible('projektinumero')">
+    <div class="col-sm-4 col-xs-12">
+      <label class="control-label"
+            data-ng-bind="i18n.content.form.projektinumero[lang]">
+      </label>
+      <i class="fa fa-info-circle justus-info"
+        data-popover-trigger="'mouseenter'"
+        data-popover-placement="right"
+        data-uib-popover="{{ i18n.content.form.projektinumero.tooltip[lang] }}"
+        data-ng-show="i18n.content.form.projektinumero.tooltip[lang]">
+      </i>
+      <span data-ng-if="isFieldRequired('projektinumero')" class="required-star">*</span>
+    </div>
+    <div class="col-sm-8 col-xs-12 justus-data"
+        data-ng-model="req_projektinumero">
+      <div class="row">
+        <div class="col-xs-10">
+          <input type="text" class="form-control"
+                data-ng-model="justus.julkaisu.projektinumero"
+                placeholder="{{ i18n.content.form.projektinumero[lang] }}">
+          <span class="fa fa-times form-control-feedback" aria-hidden="true"></span>
+        </div>
+      </div>
+    </div>
+</div>
+
 
   <h3 class="form-header">{{i18n.content.tietojensyotto.bibliografiset[lang]}}</h3>
 
