--- a/src/app/html/justus/tallennus.html
+++ b/src/app/html/justus/tallennus.html
@@ -293,7 +293,7 @@
       <!-- Abstrakti -->
       <tr data-ng-show="showPublicationInput">
         <td class="condensed font-weight-bold"> {{ i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.abstrakti[lang] }} </td>
-        <td>{{ filedata.abstract }} doöksökdfögl</td>
+        <td>{{ filedata.abstract }} </td>
       </tr>
 
       <!-- URN -->
