Disable Not self-archivable publication button if file is uploaded

--- a/src/app/html/justus/julkaisunsyotto.html
+++ b/src/app/html/justus/julkaisunsyotto.html
@@ -298,10 +298,9 @@
 
         <div class="row">
             <div class="col-xs-12">
-                <!-- TODO: disable if file exists, so user has to first remove file -->
                 <button class="col-xs-12 justus-btn justus-btn-tyyppi"
-                        data-ng-disabled="rinnakkaistallennettumuualle || syotaJulkaisu || fileAlreadyExists"
-                        data-ng-class="{'active': eirinnakkaistellennettava,  'disabled': rinnakkaistallennettumuualle || syotaJulkaisu || fileAlreadyExists}"
+                        data-ng-disabled="rinnakkaistallennettumuualle || syotaJulkaisu || fileAlreadyExists || file"
+                        data-ng-class="{'active': eirinnakkaistellennettava,  'disabled': rinnakkaistallennettumuualle || syotaJulkaisu || fileAlreadyExists || file}"
                         data-ng-click="eiRinnakkaisTallennettavaSelected(); useVaihe(5)">
                     {{ i18n.content.rinnakkaistallennusform.eirinnakkaistallennettava[lang] }}
                     <i class="fa fa-info-circle justus-info"
