--- a/src/app/scss/_helpers.scss
+++ b/src/app/scss/_helpers.scss
@@ -27,6 +27,10 @@
   padding: 0 $padding-large-horizontal
 };
 
+.pxs {
+  padding: 0 $padding-small-horizontal
+};
+
 .py {
   padding: $padding-small-vertical 0;
 }
