Add empty value to publication state dropdown and enable search on enter key

--- a/src/app/scss/_helpers.scss
+++ b/src/app/scss/_helpers.scss
@@ -89,6 +89,10 @@
   }
 }
 
+.ui-select-choices-row-inner {
+  padding-left: 10px !important;
+}
+
 @mixin input() {
   border-radius: $input-border-radius;
 }
